[gd_scene load_steps=32 format=3 uid="uid://cqjwjgbqae876"]

[ext_resource type="Script" path="res://scenes/shadow_2_projectile.gd" id="1_rmx0v"]
[ext_resource type="Shader" path="res://graphic/shaders/aberration1.gdshader" id="2_17wlf"]
[ext_resource type="Texture2D" uid="uid://68vjfdu4j0pt" path="res://graphic/characters/Player/Shadow projectile/Shad-projectile 1-Sheet.png" id="2_bh7le"]
[ext_resource type="Texture2D" uid="uid://bolx3i046molv" path="res://graphic/characters/Player/Shadow projectile/Shad-projectile explosive1-Sheet.png" id="3_eeutt"]
[ext_resource type="AudioStream" uid="uid://b1c7lrpvie4v5" path="res://Audio/SFX/Shadow swap 1.wav" id="5_k4mrg"]
[ext_resource type="AudioStream" uid="uid://wq4hktn4ejbg" path="res://Audio/SFX/Shadow explosion 1.wav" id="6_nrxs7"]
[ext_resource type="AudioStream" uid="uid://1xtklselmd3p" path="res://Audio/SFX/ShadowIdleSound1.wav" id="7_ckpt2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_thnil"]
radius = 34.2383

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uby12"]
shader = ExtResource("2_17wlf")
shader_parameter/range = 0.015
shader_parameter/noiseQuality = 57.3
shader_parameter/noiseIntensity = 0.003
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 0.565
shader_parameter/modulate = Color(2, 0.052, 0.14, 1)
shader_parameter/modulate_strength = 0.489

[sub_resource type="AtlasTexture" id="AtlasTexture_liv35"]
atlas = ExtResource("2_bh7le")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i176h"]
atlas = ExtResource("2_bh7le")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xtf2"]
atlas = ExtResource("2_bh7le")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xvc6"]
atlas = ExtResource("3_eeutt")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5yh3"]
atlas = ExtResource("3_eeutt")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmvw7"]
atlas = ExtResource("3_eeutt")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wmle"]
atlas = ExtResource("3_eeutt")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yn33"]
atlas = ExtResource("3_eeutt")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcwlu"]
atlas = ExtResource("3_eeutt")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ucyp"]
atlas = ExtResource("3_eeutt")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5intv"]
atlas = ExtResource("3_eeutt")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey550"]
atlas = ExtResource("3_eeutt")
region = Rect2(768, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_7jins"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_liv35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i176h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xtf2")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xvc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5yh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmvw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wmle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yn33")
}, {
"duration": 1.6,
"texture": SubResource("AtlasTexture_rcwlu")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_4ucyp")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5intv")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_ey550")
}, {
"duration": 2.2,
"texture": null
}],
"loop": false,
"name": &"explosion",
"speed": 19.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bj71h"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.32
direction = Vector3(0, 0, 0)
initial_velocity_min = 89.88
initial_velocity_max = 112.36
gravity = Vector3(0, 0, 0)
scale_max = 2.0
color = Color(0.866667, 0, 0.180392, 0.713726)

[sub_resource type="Curve" id="Curve_0cnmp"]
_data = [Vector2(0, 0.989011), 0.0, 0.0, 0, 0, Vector2(0.713333, 0.879121), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_gxrj7"]
curve = SubResource("Curve_0cnmp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vpxop"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.32
angle_max = 196.4
direction = Vector3(0, 0, 0)
initial_velocity_min = 123.97
initial_velocity_max = 294.18
gravity = Vector3(0, 0, 0)
scale_max = 3.0
color = Color(0.866667, 0, 0.180392, 0.713726)
alpha_curve = SubResource("CurveTexture_gxrj7")

[sub_resource type="Curve" id="Curve_77kk5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.098901), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_cudu3"]
curve = SubResource("Curve_77kk5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_p6nsi"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.32
angle_max = 196.4
direction = Vector3(0, 0, 0)
initial_velocity_min = 464.88
initial_velocity_max = 816.91
angular_velocity_min = 261.82
angular_velocity_max = 490.91
gravity = Vector3(0, 0, 0)
scale_min = 5.0
scale_max = 7.0
color = Color(4, 0.21, 0.252, 0.678)
alpha_curve = SubResource("CurveTexture_cudu3")

[sub_resource type="Gradient" id="Gradient_wc2f4"]
colors = PackedColorArray(0.87451, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_p65u1"]
gradient = SubResource("Gradient_wc2f4")
width = 160
height = 160
fill = 1
fill_from = Vector2(0.525346, 0.497696)
fill_to = Vector2(0.921659, 0.921659)

[node name="Shadow projectile 2" type="Area2D"]
scale = Vector2(0.5, 0.5)
collision_mask = 34
script = ExtResource("1_rmx0v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.420711, 0.410826)
shape = SubResource("CircleShape2D_thnil")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(2, 2, 2, 1)
material = SubResource("ShaderMaterial_uby12")
sprite_frames = SubResource("SpriteFrames_7jins")
animation = &"explosion"
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Particles2D" type="GPUParticles2D" parent="."]
visible = false
amount = 45
process_material = SubResource("ParticleProcessMaterial_bj71h")
lifetime = 0.4

[node name="OnEnemyParticles" type="GPUParticles2D" parent="."]
amount = 45
process_material = SubResource("ParticleProcessMaterial_vpxop")
lifetime = 0.7

[node name="OnEnemyExplode" type="GPUParticles2D" parent="."]
emitting = false
amount = 45
process_material = SubResource("ParticleProcessMaterial_p6nsi")
lifetime = 0.4
one_shot = true
explosiveness = 0.77

[node name="PointLight2D" type="PointLight2D" parent="."]
enabled = false
energy = 0.97
texture = SubResource("GradientTexture2D_p65u1")

[node name="SwappingSoundSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k4mrg")
volume_db = 21.609
pitch_scale = 1.51
bus = &"SFX"

[node name="ShadowExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_nrxs7")
volume_db = 5.0
pitch_scale = 1.66
bus = &"SFX"

[node name="IdleSoundSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ckpt2")
volume_db = -10.0
pitch_scale = 1.76
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_enemy_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
